# spending-analysis

./: .gitignore  pyproject.toml
src/spending_analysis/: __init__.py  bank_report.py  bank_transaction_etl.py  clear_matplotlib_fonts.py  main.py
