[project]
name = "spending-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "fastexcel>=0.13.0",
    "matplotlib>=3.10.1",
    "plotly[express]>=6.0.0",
    "polars>=1.24.0",
    "reportlab>=4.3.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
